objects/Visitation_Attendee__c.object
<CustomObject>
    <fields>
        <fullName>Account_Id__c</fullName>
        <formula>Visitation__r.Account__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Visitation Attendees</relationshipLabel>
        <relationshipName>Visitation_Attendees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Add_Executive_Attendee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Add Executive Attendee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Attendee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Attendee</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Visitations</relationshipLabel>
        <relationshipName>Visitations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Badging_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Badging Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Begin_Date__c</fullName>
        <formula>Visitation__r.Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Begin Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Citizenship__c</fullName>
        <description>Applicable to Customer attendee. If Attendee is not from US, need to get approval from export control department.</description>
        <inlineHelpText>Applicable to Customer attendee. If Attendee is not from US, need to get approval from export control department.</inlineHelpText>
        <label>Citizenship</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Antigua and Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bosnia and Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Brunei</fullName>
                </value>
                <value>
                    <fullName>Bulgaria</fullName>
                </value>
                <value>
                    <fullName>Burkina Faso</fullName>
                </value>
                <value>
                    <fullName>Burundi</fullName>
                </value>
                <value>
                    <fullName>Cabo Verde</fullName>
                </value>
                <value>
                    <fullName>Cambodia</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <formula>Visitation__r.End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <formula>Attendee__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GF_sponsor__c</fullName>
        <formula>Visitation__r.Requestor__r.Username</formula>
        <label>GF sponsor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GMT_value__c</fullName>
        <description>GMT offset (hours) example: 5 for GMT+5 or -3 for GMT-3</description>
        <label>GMT offset (hours)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <formula>Attendee__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nationality__c</fullName>
        <label>Nationality</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <defaultValue>&quot;welcome2gf&quot;</defaultValue>
        <label>Password</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_number__c</fullName>
        <label>Phone number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reason_for_Visit__c</fullName>
        <formula>Visitation__r.Reason_for_Fab_Tour__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reason for Visit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Status__c</fullName>
        <label>Request Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Requested</fullName>
                    <default>true</default>
                    <label>Requested</label>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
                <value>
                    <fullName>Confirmed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Send_Notification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Travel_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Applicable GF Attendee, If travel is required? If Travel required &quot;Region Head&quot; should approve the travel.</description>
        <inlineHelpText>Applicable GF Attendee, If travel is required? If Travel required &quot;Region Head&quot; should approve the travel.</inlineHelpText>
        <label>Travel Required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Travel_Type__c</fullName>
        <description>Applicable to GF attendee, method of travel.</description>
        <inlineHelpText>Applicable to GF attendee, method of travel.</inlineHelpText>
        <label>Travel Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fly</fullName>
                </value>
                <value>
                    <fullName>Drive</fullName>
                </value>
                <value>
                    <fullName>Public Transportation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Travel_from_location__c</fullName>
        <description>Applicable to GF attendee, Where employee travels from.</description>
        <inlineHelpText>Applicable to GF attendee, Where employee travels from.</inlineHelpText>
        <label>Travel from location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_of_attendee__c</fullName>
        <label>Type of attendee</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GF Executive</fullName>
                </value>
                <value>
                    <fullName>GF Attendee</fullName>
                </value>
                <value>
                    <fullName>Customer Attendee</fullName>
                </value>
                <value>
                    <fullName>Partner Attendee</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Visitation_Attendees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Visitation__c</fullName>
        <label>Visitation</label>
        <referenceTo>Visitation_Record__c</referenceTo>
        <relationshipLabel>Visitation Attendees</relationshipLabel>
        <relationshipName>Visitation_Attendees</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>WiFi_Details__c</fullName>
        <label>WiFi Details</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Visitation Attendee</label>
    <listViews>
        <fullName>All</fullName>
        <columns>User__c</columns>
        <columns>Visitation__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Attendee__c</columns>
        <columns>Type_of_attendee__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Visitation Attendee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Visitation Attendees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>